 * Converting from named colors to the nearest xterm or ansi equivalent is
   much more efficient. [SW]
 * Converting from extended colors to ansi colors is smarter. Based on
   work by Padraic. [SW]
 * Email registration no longer pretends to work with really!old!addresses.
   [SW].
 * Better error reporting in logs and event hooks on failed email
   registration. Suggested by Padriac. [SW]

Fixes:
 * %c contained the evaluated input (the same as %u), instead of the
   unevaluated input. Reported by Ingwaz. [MG]
 * repeat() could write partial ANSI tags, causing buffer overflows. From a
   report by Ashen-Shugar. [MG]
 * dbcks didn't reset corrupt exit's source room. Patch by Padriac.
 * lmath(and,) returned 1 instead of 0. Reported by Padriac. [SW].
 * Mixing old-style ansi colors and xterm colors was broken. [MG]
 * Players who couldn't see xterm colors would sometimes get a highlighted
   foreground color by mistake. [MG]
 * colors(<old-style-ansi>, hex) and colors(*, 16color) were broken. 
   Reported by Kimiko. [MG]
 * ANSI highlight would sometimes bleed when xterm colors were downgraded to
   the basic 16-color ANSI palette. Reported by Kimiko. [MG]

Version 1.8.5 patchlevel 3                                 Aug 23, 2012

Fixes:
 * Fix a crash bug in new color code. Discovered by ChaosMageX, fixed by
   Intrevis and [SW].

Functions:
 * name() with no arguments is now an error. It should always have been, but
   previously returned nothing for backwards compatability. If you still have
   code that relies on that behaviour, you are extremely lazy and should be
   ashamed of yourself. [MG]

Version 1.8.5 patchlevel 2                                 Aug 18, 2012

Hardcode:
 * render_string has been modified to work with multiple output formatters,
   so it can display the appropriate color syntax for the client. [GM]
 * Tweak the networking code to try to reduce output latency/queue size. [SW]

Major changes: